@@ -1,0 +1,12 @@
+/*
+ * Copyright (c) 2019 Helmut Neemann.
+ * Use of this source code is governed by the GPL v3 license
+ * that can be found in the LICENSE file.
+ */
+package de.neemann.digital.draw.shapes;
+
+/**
+ * Marker interface to mark all shapes which are only additional shapes like texts or rectangles.
+ */
+public interface DecoratingShape {
+}
