@@ -183,6 +183,10 @@
         Does not affect the simulation.
         The text can be changed in the attribute dialog.
     </string>
+    <string name="elem_Rectangle">Rectangle</string>
+    <string name="elem_Rectangle_tt">Shows a rectangle in the circuit.
+        Does not affect the simulation.
+    </string>
     <string name="elem_Probe">Probe</string>
     <string name="elem_Probe_tt">A measurement value which can be shown in the data graph or measurement table.
         This component can be used to easily observe values from embedded circuits.
@@ -1234,6 +1238,12 @@
     <string name="key_preloadProgramFile_tt">File which should be loaded into the program memory at the start of the
         simulation.
     </string>
+
+    <string name="key_RectWidth">Width</string>
+    <string name="key_RectWidth_tt">With in grid units</string>
+    <string name="key_RectHeight">Height</string>
+    <string name="key_RectHeight_tt">Height in grid units</string>
+
     <string name="key_wideShape">Wide Shape</string>
     <string name="key_wideShape_tt">Uses a wider shape to visualize the gate.</string>
 
